Fixed text alignment issue on homepage.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,17 +1,17 @@
 /* Custom CSS template overrides */
 
 /* Only on the homepage if your body has a home-ish class; otherwise this applies everywhere */
-.center { 
-  max-width: none !important; 
-}
+
 .cover-content {
   max-width: none !important; 
   width: 100% !important; 
+  text-align: left !important;
 }
 
-main.site-main .content { 
-  max-width: none !important; 
+.cover-content p {
+  text-align: left !important;
 }
+
 
 
 /* Underline links in main content - River's custom */
